--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 #header {
 	text-align: center;
-	font-family: Courier;
+	font-family: Helvetica;
 }
 
 #letter {
-	font-family: Courier;
+	font-family: Helvetica;
 	font-size: 20px;
 }
 
